footer fixed the dark mode and removed the subcribe feature

--- a/one-piece-quiz/src/components/Footer.css
+++ b/one-piece-quiz/src/components/Footer.css
@@ -1,10 +1,12 @@
 .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background: #f8f9fa;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  color: #f8f9fa;
+  background: #232323;
+  border-top: solid #e8ca41 1.5px;
+}
   
   .footer-links, .footer-social, .footer-newsletter {
     margin: 10px 0;
